# Aura

./: .gitignore  LSA_Documentation_v1.docx  LSA_Documentation_v1_polished.docx  README.md  pyproject.toml
docs/: state.md  (+4 more)
living-systems-auditor/: .gitignore  README.md  pyproject.toml
living-systems-auditor/dashboard/: README.md  package.json
living-systems-auditor/data/: control_plane.db
living-systems-auditor/docs/: roadmap.md
living-systems-auditor/ebpf/: network_observer.bt
living-systems-auditor/living_systems_auditor.egg-info/: SOURCES.txt
living-systems-auditor/lsa/: __init__.py  settings.py
living-systems-auditor/lsa/api/: main.py  models.py
living-systems-auditor/lsa/cli/: main.py
living-systems-auditor/lsa/core/: intent_graph.py
living-systems-auditor/lsa/drift/: destination_resolution.py  function_resolution.py  models.py  session_summary.py  signal_processor.py
living-systems-auditor/lsa/ingest/: ast_parser.py  doc_extractor.py  graph_builder.py
living-systems-auditor/lsa/remediation/: __init__.py  prompt_builder.py  report_writer.py
living-systems-auditor/lsa/services/: ingest_service.py  job_service.py  trace_collection_service.py
living-systems-auditor/lsa/storage/: __init__.py  files.py  models.py
living-systems-auditor/tests/fixtures/: address_stack_trace.log.symbols.json
living-systems-auditor/tests/unit/: test_api.py  test_ast_parser.py  test_cli_flow.py  test_control_plane_alert_service.py  test_graph_builder.py  test_ingest_service.py  test_job_service.py  test_session_summary.py  test_storage.py  test_trace_parser.py
(+97 files in other folders)
